# sha256-cpp

./: CMakeLists.txt  LICENSE  README.md
include/: generate.hpp  sha256.hpp  utils.hpp  verify.hpp
resource/: version.rc
src/: generate.cpp  main.cpp  sha256.cpp  utils.cpp  verify.cpp
